Add gallery. Minor changes

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	  </div>
 	  <div align="left" style="font-size: 24px; font-weight: bold; ">W Patrick Hooper</div>
 	  <div style="margin-top: 6px; margin-bottom: 0em; ">
-		 <img src="images/email.png" border="0" alt="email address">
+		 <img src="email.png" border="0" alt="email address">
 	  </div>
    </div>
    <div class="lowerline" style="font-weight: bold; border-bottom-color: black; ">   
@@ -63,6 +63,11 @@
 <ul>
     <li><a href="docs/">Papers and Slides</a></li>
     <li><a href="gallery/">Image Gallery</a></li>
+</ul>
+
+<p style="background: yellow; text-color: black; ">This site used to do much more. I plan to slowly bring it back. Email me if there is something you need access to.</p>
+<!--
+
     <li><a href="teaching/">Teaching</a><ul>
         <li><a href="teaching/2024-fall-324/">Advanced Calculus II</a></li>
         <li><a href="teaching/2024-fall-sage/">Computation</a></li>
@@ -72,6 +77,7 @@
 		<li><a href="visual/web_mcb/">McBilliards</a></li>
 	</ul></li>
 </ul>
+-->
 
 <!--
 <h3>Interactive Applications:</h3>
@@ -82,12 +88,15 @@
 	</div>
 -->
 
+<!--
 <h3>Programming Tutorials:</h3>
 <ul>
 	<li><a href="java/tutorial/">Java</a></li>
 	<li><a href="svg/">Scalable Vector Graphics</a></li>
 </ul>
+-->
 
+<!--
 <h3>Miscellaneous:</h3>
 <ul>
     <li><a href="code/">Programming</a></li>
@@ -95,23 +104,23 @@
 	<li><a href="worksheets/">Worksheets</a></li>
 	<li><a href="graph_paper/triangle.html">Triangular graph paper</a></li>
 </ul>
-
+-->
 </div>
 	</td>
 	<td width="425" align="left" valign="top">
 		<div align="center" style="border-color: #186EDF; border-style: dashed; border-width: 1px; margin: 5px; ">
-	<div style="border-bottom-style: dashed; border-bottom-width: 1px; border-color: #186EDF; border-left-style: dashed; border-left-width: 1px; float: right; margin-bottom: 5px; padding-left: 5px; padding-right: 5px; ">
-<a href="index.php?blurb=0">next</a>	</div>
+	<!--<div style="border-bottom-style: dashed; border-bottom-width: 1px; border-color: #186EDF; border-left-style: dashed; border-left-width: 1px; float: right; margin-bottom: 5px; padding-left: 5px; padding-right: 5px; ">
+<a href="index.php?blurb=1">next</a>	</div>
 	<div style="border-bottom-style: dashed; border-bottom-width: 1px; border-color: #186EDF; border-right-style: dashed; border-right-width: 1px; float: left; margin-bottom: 5px; padding-left: 5px; padding-right: 5px; ">
-<a href="index.php?blurb=2">previous</a>	</div>
-<img src="images/inc/desert_temple.png" width="400" height="377" border="0" alt=""><br>
-Isometric projection of a surface in space built quasiperiodically by rectangles using <a href="visual/necker/">Necker Tiler</a>.
+<a href="index.php?blurb=3">previous</a>	</div>-->
+			<img src="images/inc/decomp3.png" width="400" height="293" border="0" alt=""><br>
+			A decomposition of a Veech surface into cylinders.<br>[<a href="visual/veech_triangle/index.html">see more</a>]
 		</div>
 	</td>
 </tr>
 </table>
 <div style="text-align: right; ">
-<div>Last modified on August 28, 2024.</div>[<a href="http://validator.w3.org/check?uri=referer" class="hide">check html</a>]
+<div>Last modified on January 20, 2025.</div>[<a href="http://validator.w3.org/check?uri=referer" class="hide">check html</a>]
 [<a href="http://jigsaw.w3.org/css-validator/check/referer" class="hide">check css</a>]
 </div>
 	
