--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link href="css/main2.css" type="text/css" rel="Stylesheet">
 <script type="text/javascript" src="index.js">
 </script>
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body style="background-image: url(images/backgrounds/torus_night.png); font-family: arial,sans-serif; font-size: 14px; ">
 
@@ -37,7 +38,7 @@
 	  </div>
 	  <div align="left" style="font-size: 24px; font-weight: bold; ">W Patrick Hooper</div>
 	  <div style="margin-top: 6px; margin-bottom: 0em; ">
-		 <img src="email.png" border="0" alt="email address">
+		 <img src="images/email.png" border="0" alt="email address">
 	  </div>
    </div>
    <div class="lowerline" style="font-weight: bold; border-bottom-color: black; ">   
