--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
@@ -64,6 +64,7 @@
 <ul>
     <li><a href="docs/">Papers and Slides</a></li>
     <li><a href="gallery/">Image Gallery</a></li>
+    <li><a href="teaching/2025-spring-topology/">Topology course</a><ul>
 </ul>
 
 <p style="background: yellow; text-color: black; ">This site used to do much more. I plan to slowly bring it back. Email me if there is something you need access to.</p>
@@ -111,17 +112,16 @@
 	<td width="425" align="left" valign="top">
 		<div align="center" style="border-color: #186EDF; border-style: dashed; border-width: 1px; margin: 5px; ">
 	<!--<div style="border-bottom-style: dashed; border-bottom-width: 1px; border-color: #186EDF; border-left-style: dashed; border-left-width: 1px; float: right; margin-bottom: 5px; padding-left: 5px; padding-right: 5px; ">
-<a href="index.php?blurb=1">next</a>	</div>
+<a href="index.php?blurb=2">next</a>	</div>
 	<div style="border-bottom-style: dashed; border-bottom-width: 1px; border-color: #186EDF; border-right-style: dashed; border-right-width: 1px; float: left; margin-bottom: 5px; padding-left: 5px; padding-right: 5px; ">
-<a href="index.php?blurb=3">previous</a>	</div>-->
-			<img src="images/inc/decomp3.png" width="400" height="293" border="0" alt=""><br>
-			A decomposition of a Veech surface into cylinders.<br>[<a href="visual/veech_triangle/index.html">see more</a>]
-		</div>
+<a href="index.php?blurb=0">previous</a>	</div>-->
+			<img src="images/inc/uac.png" width="400" height="281" border="0" alt=""><br>
+			The universal abelian cover of a 3-punctured sphere.		</div>
 	</td>
 </tr>
 </table>
 <div style="text-align: right; ">
-<div>Last modified on January 20, 2025.</div>[<a href="http://validator.w3.org/check?uri=referer" class="hide">check html</a>]
+<div>Last modified on January 23, 2025.</div>[<a href="http://validator.w3.org/check?uri=referer" class="hide">check html</a>]
 [<a href="http://jigsaw.w3.org/css-validator/check/referer" class="hide">check css</a>]
 </div>
 	
