Update to 2025-spring-topology

--- a/teaching/2025-spring-topology/homework/index.html
+++ b/teaching/2025-spring-topology/homework/index.html
@@ -25,7 +25,7 @@
 <td class="info"><b>Homework 1:</b><br>Munkres &sect;1: 3, 9<br>
 Munkres &sect;2: 2, 6<br>
 Munkres &sect;3: 3, 4, 5, 13<br>
-Please complete this <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=s_BgbwZfCU6XFZiduozH2N39R2FkmZNDqPmgpXyf6QRUODlVMlkwNVJOM0FXTUYxODdENVBCSzkxOC4u">Mathematical Background Survey.</a><br><br><hr><b>Additional problems that I think would be good practice (not collected):</b><br>Munkres &sect;2: 5<br>
+Please complete this <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=s_BgbwZfCU6XFZiduozH2N39R2FkmZNDqPmgpXyf6QRUODlVMlkwNVJOM0FXTUYxODdENVBCSzkxOC4u">Mathematical Background Survey.</a><br>Read Munkres &sect; 1-8. (Ideally, you should be reading sections before they are covered in the course. I will not explicitly list all reading I expect you to do.)<br><hr><b>Additional problems that I think would be good practice (not collected):</b><br>Munkres &sect;2: 5<br>
 Munkres &sect;3: 15<br>
 Munkres &sect;4: 4, 10<br>
 Munkres &sect;5: 4, 5<br>
