--- a/teaching/2025-spring-topology/calendar/index.html
+++ b/teaching/2025-spring-topology/calendar/index.html
@@ -59,65 +59,69 @@ Munkres &sect;19: The Product Topology</td>
 <td class="info"><b>College Closed</b></td>
 </tr>
 <tr>
-<td class="info-left">Wed, Feb 19</td>
-<td class="info">Munkres &sect;20: The Metric Topology<br>
+<td class="info-left">Tue, Feb 18</td>
+<td class="info"><span style="color: red; font-weight: bold; ">Classes follow a Monday schedule.</span><br>Munkres &sect;20: The Metric Topology<br>
 Munkres &sect;21: The Metric Topology (continued)</td>
 </tr>
 <tr>
-<td class="info-left">Mon, Feb 24</td>
+<td class="info-left">Wed, Feb 19</td>
 <td class="info">Munkres &sect;22: The Quotient Topology</td>
 </tr>
 <tr>
-<td class="info-left">Wed, Feb 26</td>
+<td class="info-left">Mon, Feb 24</td>
 <td class="info">Munkres &sect;9: Infinite Sets and the Axiom of Choice<br>
 Munkres &sect;10: Well-Ordered Sets</td>
 </tr>
 <tr>
-<td class="info-left">Mon, Mar 3</td>
+<td class="info-left">Wed, Feb 26</td>
 <td class="info">Begin Munkres Chapter 3: Connectedness and Compactness<br>
 Munkres &sect;23: Connected Spaces<br>
 Munkres &sect;24: Connected Subspaces of the Real Line</td>
 </tr>
 <tr>
+<td class="info-left">Mon, Mar 3</td>
+<td class="info">Possible lecture/review.</td>
+</tr>
+<tr>
 <td class="info-left">Wed, Mar 5</td>
-<td class="info">Munkres &sect;26: Compact Spaces<br>
-Munkres &sect;27: Compact Subspaces of the Real Line</td>
-</tr>
-<tr>
-<td class="info-left">Thu, Mar 6</td>
-<td class="info"><span style="color: red; font-weight: bold; ">Classes follow a Wednesday schedule.</span><br>Possible lecture/review.</td>
-</tr>
-<tr>
-<td class="info-left">Mon, Mar 10</td>
 <td class="info"><span style="color: red; font-weight: bold; ">Midterm 1.</span></td>
 </tr>
 <tr>
-<td class="info-left">Wed, Mar 12</td>
+<td class="info-left">Thu, Mar 6</td>
+<td class="info"><span style="color: red; font-weight: bold; ">Classes follow a Wednesday schedule.</span><br>Munkres &sect;26: Compact Spaces<br>
+Munkres &sect;27: Compact Subspaces of the Real Line</td>
+</tr>
+<tr>
+<td class="info-left">Mon, Mar 10</td>
 <td class="info">Munkres &sect;28: Limit Point Compactness<br>
 Munkres &sect;29: Local Compactness</td>
 </tr>
 <tr>
-<td class="info-left">Mon, Mar 17</td>
+<td class="info-left">Wed, Mar 12</td>
 <td class="info">Begin Munkres Chapter 4: Countability and Separation Axioms<br>
 Munkres &sect;30: The Countability Axioms</td>
 </tr>
 <tr>
-<td class="info-left">Wed, Mar 19</td>
+<td class="info-left">Mon, Mar 17</td>
 <td class="info">Munkres &sect;31: The Separation Axioms</td>
 </tr>
 <tr>
-<td class="info-left">Mon, Mar 24</td>
+<td class="info-left">Wed, Mar 19</td>
 <td class="info">Munkres &sect;32: Normal Spaces<br>
 Munkres &sect;33: The Urysohn Lemma</td>
 </tr>
 <tr>
-<td class="info-left">Wed, Mar 26</td>
+<td class="info-left">Mon, Mar 24</td>
 <td class="info">Munkres &sect;34: The Urysohn Metrization Theorem</td>
 </tr>
 <tr>
-<td class="info-left">Mon, Mar 31</td>
+<td class="info-left">Wed, Mar 26</td>
 <td class="info">Begin Munkres Chapter 9: The Fundamental Group<br>
 Munkres &sect;51: Homotopy of Paths</td>
+</tr>
+<tr>
+<td class="info-left">Mon, Mar 31</td>
+<td class="info"><b>No classes scheduled</b></td>
 </tr>
 <tr>
 <td class="info-left">Wed, Apr 2</td>
@@ -184,7 +188,7 @@ Relevant links:
 <div class="center noprint">Return to the <a href="../">course website</a></div>
 </div>
 <div class="noprint" style="margin-top: 1em; text-align: right; ">
-Last modified on January 23, 2025.<br> 
+Last modified on January 27, 2025.<br> 
 [<a href="http://validator.w3.org/check?uri=referer" class="hide">check html</a>]
 [<a href="http://jigsaw.w3.org/css-validator/check/referer" class="hide">check css</a>]
 </div>
