Update to 2025-spring-topology

--- a/teaching/2025-spring-topology/calendar/index.html
+++ b/teaching/2025-spring-topology/calendar/index.html
@@ -34,15 +34,16 @@ Munkres &sect;8: The Principle of Recursive Definition</td>
 </tr>
 <tr>
 <td class="info-left">Mon, Feb 3</td>
-<td class="info">Begin Munkres Chapter 2: Topological Spaces and Continuous Functions<br>
+<td class="info">Finish Munkres &sect;7: Countable and Uncountable Sets<br>
+Begin Munkres Chapter 2: Topological Spaces and Continuous Functions<br>
 Munkres &sect;12: Topological Spaces<br>
-Munkres &sect;13: Basis for a Topology<br>
-Munkres &sect;14: The Order Topology<br>
-Munkres &sect;15: The Product Topology on X x Y</td>
+Munkres &sect;13: Basis for a Topology</td>
 </tr>
 <tr>
 <td class="info-left">Wed, Feb 5</td>
-<td class="info">Munkres &sect;16: The Subspace Topology<br>
+<td class="info">Munkres &sect;14: The Order Topology<br>
+Munkres &sect;15: The Product Topology on X x Y<br>
+Munkres &sect;16: The Subspace Topology<br>
 Munkres &sect;17: Closed Sets and Limit Points</td>
 </tr>
 <tr>
@@ -188,7 +189,7 @@ Relevant links:
 <div class="center noprint">Return to the <a href="../">course website</a></div>
 </div>
 <div class="noprint" style="margin-top: 1em; text-align: right; ">
-Last modified on January 27, 2025.<br> 
+Last modified on February 3, 2025.<br> 
 [<a href="http://validator.w3.org/check?uri=referer" class="hide">check html</a>]
 [<a href="http://jigsaw.w3.org/css-validator/check/referer" class="hide">check css</a>]
 </div>
