--- a/teaching/2025-spring-topology/homework/index.html
+++ b/teaching/2025-spring-topology/homework/index.html
@@ -37,8 +37,12 @@ Munkres &sect;7: 3, 5<br>
 <td class="info-left">Mon, Feb 10</td>
 <td class="info"><b>Homework 2:</b><br>Munkres &sect;7: 4, 6<br>
 Munkres &sect;8: 6<br>
-More problems to be assigned.<br><hr><b>Additional problems that I think would be good practice (not collected):</b><br>Munkres &sect;7: 8, 9<br>
+Munkres &sect;13: 1, 3, 5, 8<br>
+Munkres &sect;16: 1, 2<br>
+<hr><b>Additional problems that I think would be good practice (not collected):</b><br>Munkres &sect;7: 8, 9<br>
 Munkres &sect;8: 2, 3<br>
+Munkres &sect;13: 4, 7<br>
+Munkres &sect;16: 3<br>
 </td>
 </tr>
 </tbody></table>
@@ -47,7 +51,7 @@ Munkres &sect;8: 2, 3<br>
 <div class="center noprint">Return to the <a href="../">course website</a></div>
 </div>
 <div class="noprint" style="margin-top: 1em; text-align: right; ">
-Last modified on January 27, 2025.<br> 
+Last modified on February 3, 2025.<br> 
 [<a href="http://validator.w3.org/check?uri=referer" class="hide">check html</a>]
 [<a href="http://jigsaw.w3.org/css-validator/check/referer" class="hide">check css</a>]
 </div>
