--- a/teaching/2025-spring-topology/index.html
+++ b/teaching/2025-spring-topology/index.html
@@ -65,7 +65,7 @@ These are all pdf documents.
 	<tr>
 		<td class="info-left"><strong>Office Hours:</strong></td>
 		<td class="info">
-			Wednesdays 4:30-5:30pm or by appointment.		</td>
+			3:30-5:30pm on any Wednesday our class meets, or by appointment.		</td>
 	</tr>
 	<tr>
 		<td class="info-left"><strong>Email:</strong></td>
@@ -86,7 +86,7 @@ These are all pdf documents.
 <div class="center">Visit <a href="../../">Prof. Hooper's website</a></div>
 
 <div class="noprint" style="margin-top: 1em; text-align: right; ">
-Last modified on January 23, 2025.<br> 
+Last modified on February 3, 2025.<br> 
 [<a href="http://validator.w3.org/check?uri=referer" class="hide">check html</a>]
 [<a href="http://jigsaw.w3.org/css-validator/check/referer" class="hide">check css</a>]
 </div>
