--- a/teaching/2025-spring-topology/syllabus-46300/index.html
+++ b/teaching/2025-spring-topology/syllabus-46300/index.html
@@ -34,7 +34,7 @@
 <div><b>Instructor Information:</b>
 	<ul>
 		<li><b>Name:</b> Prof. Pat Hooper</li>
-		<li><b>Office Hours:</b> Wednesdays 4:30-5:30pm or by appointment.</li>
+		<li><b>Office Hours:</b> 3:30-5:30pm on any Wednesday our class meets, or by appointment.</li>
 		<li><b>Office:</b> Marshak 209</li>
 		<li><b>Office Phone:</b> (212) 650-5149 (extension 5149 from on campus)</li>
 		<li><b>Email:</b> <a href="&#x6d;&#x61;&#x69;&#x6c;&#x74;&#x6f;&#x3a;&#x77;&#x68;&#x6f;&#x6f;&#x70;&#x65;&#x72;&#x40;&#x63;&#x63;&#x6e;&#x79;&#x2e;&#x63;&#x75;&#x6e;&#x79;&#x2e;&#x65;&#x64;&#x75;">&#x77;&#x68;&#x6f;&#x6f;&#x70;&#x65;&#x72;&#x40;&#x63;&#x63;&#x6e;&#x79;&#x2e;&#x63;&#x75;&#x6e;&#x79;&#x2e;&#x65;&#x64;&#x75;</a></li>
@@ -43,7 +43,7 @@
 </div>
 <div><b>Course Textbooks:</b>
 	<ul>
-		<li>Munkres. Topology, 2nd edition, Prentice Hall, 2000.</li>	</ul>
+		<li>Munkres. Topology, 2nd edition, Prentice Hall, 2000.</li>	</ul>
 	<p>Other sources such as exerpts from other textbooks, or parts of other freely available textbooks may be used as well.</p>
 <!--<p>The textbook is available for free download from the CCNY library through SpringerLink. Try the link above.<p>-->
 <!--<p>The textbook is available for free download and has an interactive web version. Try the link above.<p>-->
@@ -116,7 +116,7 @@ This is a Master’s course which is cross-listed with an undergraduate course. 
 
 <div><b>Course website:</b> Course information, homework assignments, and documents can be found
 on the website:
-<div class="center"><a href="http://wphooper.com/teaching/2024-spring-a6300">http://wphooper.com/teaching/2024-spring-a6300</a></div>
+<div class="center"><a href="http://wphooper.com/teaching/2024-spring-topology/">http://wphooper.com/teaching/2024-spring-topology/</a></div>
 </div>
 
 <div><b>Brightspace:</b> I use Brightspace to keep track of your grades. To access Brightspace visit:
