Update to 2025-spring-topology

--- a/teaching/2025-spring-topology/calendar/index.html
+++ b/teaching/2025-spring-topology/calendar/index.html
@@ -41,15 +41,15 @@ Munkres &sect;13: Basis for a Topology</td>
 </tr>
 <tr>
 <td class="info-left">Wed, Feb 5</td>
-<td class="info">Munkres &sect;14: The Order Topology<br>
-Munkres &sect;15: The Product Topology on X x Y<br>
-Munkres &sect;16: The Subspace Topology<br>
-Munkres &sect;17: Closed Sets and Limit Points</td>
+<td class="info">Finish Munkres &sect;13: Basis for a Topology<br>
+Munkres &sect;14: The Order Topology<br>
+Munkres &sect;16: The Subspace Topology</td>
 </tr>
 <tr>
 <td class="info-left">Mon, Feb 10</td>
-<td class="info">Munkres &sect;18: Continuous Functions<br>
-Munkres &sect;19: The Product Topology</td>
+<td class="info">Munkres &sect;15: The Product Topology on X x Y<br>
+Munkres &sect;17: Closed Sets and Limit Points<br>
+Munkres &sect;18: Continuous Functions</td>
 </tr>
 <tr>
 <td class="info-left">Wed, Feb 12</td>
@@ -61,7 +61,8 @@ Munkres &sect;19: The Product Topology</td>
 </tr>
 <tr>
 <td class="info-left">Tue, Feb 18</td>
-<td class="info"><span style="color: red; font-weight: bold; ">Classes follow a Monday schedule.</span><br>Munkres &sect;20: The Metric Topology<br>
+<td class="info"><span style="color: red; font-weight: bold; ">Classes follow a Monday schedule.</span><br>Munkres &sect;19: The Product Topology<br>
+Munkres &sect;20: The Metric Topology<br>
 Munkres &sect;21: The Metric Topology (continued)</td>
 </tr>
 <tr>
@@ -189,7 +190,7 @@ Relevant links:
 <div class="center noprint">Return to the <a href="../">course website</a></div>
 </div>
 <div class="noprint" style="margin-top: 1em; text-align: right; ">
-Last modified on February 3, 2025.<br> 
+Last modified on February 7, 2025.<br> 
 [<a href="http://validator.w3.org/check?uri=referer" class="hide">check html</a>]
 [<a href="http://jigsaw.w3.org/css-validator/check/referer" class="hide">check css</a>]
 </div>
