--- a/teaching/2025-spring-topology/index.html
+++ b/teaching/2025-spring-topology/index.html
@@ -13,7 +13,8 @@ Topology<br>
 <h2>Announcements:</h2>
 <div class="block">
 <ul>
-<li>None.</li>
+<!--<li>None.</li>-->
+<li>As announced in class, the due date for homework 2 has been pushed back to Tuesday Feb 18th.</li>
 </ul>
 </div>
 
@@ -86,7 +87,7 @@ These are all pdf documents.
 <div class="center">Visit <a href="../../">Prof. Hooper's website</a></div>
 
 <div class="noprint" style="margin-top: 1em; text-align: right; ">
-Last modified on February 3, 2025.<br> 
+Last modified on February 7, 2025.<br> 
 [<a href="http://validator.w3.org/check?uri=referer" class="hide">check html</a>]
 [<a href="http://jigsaw.w3.org/css-validator/check/referer" class="hide">check css</a>]
 </div>
