Update to 2025-spring-topology

--- a/teaching/2025-spring-topology/homework/index.html
+++ b/teaching/2025-spring-topology/homework/index.html
@@ -45,13 +45,23 @@ Munkres &sect;13: 4, 7<br>
 Munkres &sect;16: 3<br>
 </td>
 </tr>
+<tr>
+<td class="info-left">Mon, Feb 24</td>
+<td class="info"><b>Homework 3:</b><br>Munkres &sect;16: 6, 9<br>
+Munkres &sect;17: 4, 13, 14, 19<br>
+Munkres &sect;18: 3, 7, 8<br>
+<hr><b>Additional problems that I think would be good practice (not collected):</b><br>Munkres &sect;16: 8<br>
+Munkres &sect;17: 3, 7, 8, 15<br>
+Munkres &sect;18: 9, 11, 12, 13<br>
+</td>
+</tr>
 </tbody></table>
 
 <hr class="noprint">
 <div class="center noprint">Return to the <a href="../">course website</a></div>
 </div>
 <div class="noprint" style="margin-top: 1em; text-align: right; ">
-Last modified on February 7, 2025.<br> 
+Last modified on February 10, 2025.<br> 
 [<a href="http://validator.w3.org/check?uri=referer" class="hide">check html</a>]
 [<a href="http://jigsaw.w3.org/css-validator/check/referer" class="hide">check css</a>]
 </div>
