Update to 2025-spring-topology

--- a/teaching/2025-spring-topology/calendar/index.html
+++ b/teaching/2025-spring-topology/calendar/index.html
@@ -65,17 +65,17 @@ Munkres &sect;19: The Product Topology</td>
 </tr>
 <tr>
 <td class="info-left">Wed, Feb 19</td>
+<td class="info">Munkres &sect;19: The Product Topology<br>
+Munkres &sect;20: The Metric Topology</td>
+</tr>
+<tr>
+<td class="info-left">Mon, Feb 24</td>
 <td class="info">Munkres &sect;20: The Metric Topology<br>
 Munkres &sect;21: The Metric Topology (continued)</td>
 </tr>
 <tr>
-<td class="info-left">Mon, Feb 24</td>
-<td class="info">Munkres &sect;22: The Quotient Topology</td>
-</tr>
-<tr>
 <td class="info-left">Wed, Feb 26</td>
-<td class="info">Munkres &sect;9: Infinite Sets and the Axiom of Choice<br>
-Munkres &sect;10: Well-Ordered Sets</td>
+<td class="info">Munkres &sect;22: The Quotient Topology</td>
 </tr>
 <tr>
 <td class="info-left">Mon, Mar 3</td>
@@ -87,37 +87,38 @@ Munkres &sect;10: Well-Ordered Sets</td>
 </tr>
 <tr>
 <td class="info-left">Thu, Mar 6</td>
-<td class="info"><span style="color: red; font-weight: bold; ">Classes follow a Wednesday schedule.</span><br>Begin Munkres Chapter 3: Connectedness and Compactness<br>
+<td class="info"><span style="color: red; font-weight: bold; ">Classes follow a Wednesday schedule.</span><br>Munkres &sect;9: Infinite Sets and the Axiom of Choice<br>
+Munkres &sect;10: Well-Ordered Sets</td>
+</tr>
+<tr>
+<td class="info-left">Mon, Mar 10</td>
+<td class="info">Begin Munkres Chapter 3: Connectedness and Compactness<br>
 Munkres &sect;23: Connected Spaces<br>
 Munkres &sect;24: Connected Subspaces of the Real Line</td>
 </tr>
 <tr>
-<td class="info-left">Mon, Mar 10</td>
+<td class="info-left">Wed, Mar 12</td>
 <td class="info">Munkres &sect;26: Compact Spaces<br>
 Munkres &sect;27: Compact Subspaces of the Real Line</td>
 </tr>
 <tr>
-<td class="info-left">Wed, Mar 12</td>
+<td class="info-left">Mon, Mar 17</td>
 <td class="info">Munkres &sect;28: Limit Point Compactness<br>
 Munkres &sect;29: Local Compactness</td>
 </tr>
 <tr>
-<td class="info-left">Mon, Mar 17</td>
+<td class="info-left">Wed, Mar 19</td>
 <td class="info">Begin Munkres Chapter 4: Countability and Separation Axioms<br>
 Munkres &sect;30: The Countability Axioms</td>
 </tr>
 <tr>
-<td class="info-left">Wed, Mar 19</td>
+<td class="info-left">Mon, Mar 24</td>
 <td class="info">Munkres &sect;31: The Separation Axioms</td>
 </tr>
 <tr>
-<td class="info-left">Mon, Mar 24</td>
+<td class="info-left">Wed, Mar 26</td>
 <td class="info">Munkres &sect;32: Normal Spaces<br>
 Munkres &sect;33: The Urysohn Lemma</td>
-</tr>
-<tr>
-<td class="info-left">Wed, Mar 26</td>
-<td class="info">Munkres &sect;34: The Urysohn Metrization Theorem</td>
 </tr>
 <tr>
 <td class="info-left">Mon, Mar 31</td>
@@ -125,8 +126,7 @@ Munkres &sect;33: The Urysohn Lemma</td>
 </tr>
 <tr>
 <td class="info-left">Wed, Apr 2</td>
-<td class="info">Begin Munkres Chapter 9: The Fundamental Group<br>
-Munkres &sect;51: Homotopy of Paths</td>
+<td class="info">Munkres &sect;34: The Urysohn Metrization Theorem</td>
 </tr>
 <tr>
 <td class="info-left">Mon, Apr 7</td>
@@ -146,35 +146,36 @@ Munkres &sect;51: Homotopy of Paths</td>
 </tr>
 <tr>
 <td class="info-left">Mon, Apr 21</td>
-<td class="info">Munkres &sect;52: The Fundamental Group</td>
+<td class="info">Begin Munkres Chapter 9: The Fundamental Group<br>
+Munkres &sect;51: Homotopy of Paths</td>
 </tr>
 <tr>
 <td class="info-left">Wed, Apr 23</td>
-<td class="info">Munkres &sect;53: Covering Spaces</td>
+<td class="info">Munkres &sect;52: The Fundamental Group</td>
 </tr>
 <tr>
 <td class="info-left">Mon, Apr 28</td>
-<td class="info">Munkres &sect;54: The Fundamental Group of the Circle</td>
+<td class="info">Munkres &sect;53: Covering Spaces</td>
 </tr>
 <tr>
 <td class="info-left">Wed, Apr 30</td>
-<td class="info">Munkres &sect;55: Retractions and Fixed Points</td>
+<td class="info">Munkres &sect;54: The Fundamental Group of the Circle</td>
 </tr>
 <tr>
 <td class="info-left">Mon, May 5</td>
-<td class="info">Munkres &sect;58: Deformation Retracts and Homotopy Type</td>
+<td class="info">Munkres &sect;55: Retractions and Fixed Points</td>
 </tr>
 <tr>
 <td class="info-left">Wed, May 7</td>
-<td class="info">Munkres &sect;59: The Fundamental Group of S^n</td>
+<td class="info">Munkres &sect;58: Deformation Retracts and Homotopy Type</td>
 </tr>
 <tr>
 <td class="info-left">Mon, May 12</td>
-<td class="info">Munkres &sect;60: Fundamental Groups of Some Surfaces</td>
+<td class="info">Munkres &sect;59: The Fundamental Group of S^n</td>
 </tr>
 <tr>
 <td class="info-left">Wed, May 14</td>
-<td class="info">Class plan to be announced.</td>
+<td class="info">Munkres &sect;60: Fundamental Groups of Some Surfaces</td>
 </tr>
 </table>
 <p>
@@ -189,7 +190,7 @@ Relevant links:
 <div class="center noprint">Return to the <a href="../">course website</a></div>
 </div>
 <div class="noprint" style="margin-top: 1em; text-align: right; ">
-Last modified on February 10, 2025.<br> 
+Last modified on February 23, 2025.<br> 
 [<a href="http://validator.w3.org/check?uri=referer" class="hide">check html</a>]
 [<a href="http://jigsaw.w3.org/css-validator/check/referer" class="hide">check css</a>]
 </div>
