--- a/teaching/2025-spring-topology/homework/index.html
+++ b/teaching/2025-spring-topology/homework/index.html
@@ -55,13 +55,23 @@ Munkres &sect;17: 3, 7, 8, 15<br>
 Munkres &sect;18: 9, 11, 12, 13<br>
 </td>
 </tr>
+<tr>
+<td class="info-left">Mon, Mar 3</td>
+<td class="info"><b>Homework 4:</b><br>Munkres &sect;19: 3, 6, 7, 8<br>
+Munkres &sect;20: 2, 3<br>
+Munkres &sect;21: 2, 6, 7, 8<br>
+<hr><b>Additional problems that I think would be good practice (not collected):</b><br>Munkres &sect;19: 10<br>
+Munkres &sect;20: 4, 5, 7<br>
+Munkres &sect;21: 3, 9, 10<br>
+</td>
+</tr>
 </tbody></table>
 
 <hr class="noprint">
 <div class="center noprint">Return to the <a href="../">course website</a></div>
 </div>
 <div class="noprint" style="margin-top: 1em; text-align: right; ">
-Last modified on February 10, 2025.<br> 
+Last modified on February 23, 2025.<br> 
 [<a href="http://validator.w3.org/check?uri=referer" class="hide">check html</a>]
 [<a href="http://jigsaw.w3.org/css-validator/check/referer" class="hide">check css</a>]
 </div>
